# tsadaash-rust

./: .env.example  .gitignore  Cargo.toml
data/: app.db  timezones.json
docs/: APPLICATION_LAYER.md  ARCHITECTURE.md  PERIODICITY_QUICK_REFERENCE.md  PERIODICITY_SYSTEM.md  REFACTORING_SUMMARY.md  USER_SCHEDULE.md
examples/: periodicity_demo.rs
src/: config.rs  lib.rs  main.rs
src/application/: errors.rs  mod.rs  types.rs
src/application/dto/: mod.rs  schedule_dto.rs  task_dto.rs  user_dto.rs  view_dto.rs
src/application/ports/: mod.rs  schedule_repository.rs  task_repository.rs  user_repository.rs
src/application/use_cases/: complete_occurrence_rep.rs  create_schedule_template.rs  create_task.rs  get_day_overview.rs  mod.rs  register_user.rs  set_active_schedule_template.rs  update_task.rs  update_user_settings.rs  upsert_recurring_rule.rs
src/cli/: auth.rs  menu.rs  mod.rs  security.rs  task.rs
src/db/: connection.rs
src/db/repository/: task.rs  user.rs
src/domain/: continents.rs  location.rs  mod.rs  periodicity.rs  task.rs  task_occurrence.rs  timezone.rs  user.rs
src/domain/builders/: mod.rs  periodicity_builder.rs
src/domain/entities/: mod.rs
src/domain/entities/schedule/: expansion.rs  matching.rs  mod.rs  template.rs  tests.rs  types.rs
src/domain/periodicity/: builder.rs  tests.rs  validation.rs
src/domain/tests/: tests.rs
src/domain/validators/: mod.rs  periodicity_validator.rs
src/infrastructure/: clock.rs  mod.rs
src/infrastructure/memory/: mod.rs  schedule_repository.rs  task_repository.rs  user_repository.rs
(+10 files in other folders)
