[package]
name = "tsadaash"
version = "0.1.0"
edition = "2021"

[dependencies]
# ───────────────────────────────────────────────────────────
# Domain layer
# Pure business logic, no I/O
# ───────────────────────────────────────────────────────────
chrono = "0.4.43"
chrono-tz = "0.10.4"
once_cell = "1.20.2"

# ───────────────────────────────────────────────────────────
# Application / bootstrap
# Config loading, startup concerns
# ───────────────────────────────────────────────────────────
argon2 = { version = "0.5.3", features = ["std"] }
dotenv = "0.15.0"

# ───────────────────────────────────────────────────────────
# (Future) Infrastructure
# Persistence, HTTP, etc.
# ───────────────────────────────────────────────────────────